add warehouse search functionality
